--- a/install/djpanel.service
+++ b/install/djpanel.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Group=www-data
 WorkingDirectory=/var/dpanel
-ExecStart=/var/venv/dj_venv/bin/python /mnt/d/Developing/PyProjects/pythonProject/dpanel/manage.py runserver 0.0.0.0:8040
+ExecStart=/var/venv/dp_venv/bin/python /var/dpanel/manage.py runserver 0.0.0.0:8080
 Restart=always
 
 [Install]
