--- a/install/djpanel.service
+++ b/install/djpanel.service
@@ -4,8 +4,8 @@ After=network.target
 
 [Service]
 Group=www-data
-WorkingDirectory=/var/dpanel
-ExecStart=/var/venv/dp_venv/bin/python /var/dpanel/manage.py runserver 0.0.0.0:8080
+WorkingDirectory=/var/server/dpanel/app
+ExecStart=/var/server/dpanel/venv/bin/python /var/server/dpanel/app/manage.py runserver 0.0.0.0:8080
 Restart=always
 
 [Install]
