--- a/templates/templates/uwsgi_config.ini
+++ b/templates/templates/uwsgi_config.ini
@@ -1,14 +1,14 @@
 [uwsgi]
-processname = {{processname}}
-processes = 1
-threads = 2
-chdir = {{chdir}}
-module = {{module}}
-socket = 0.0.0.0:{{socket}}
-daemonize = {{daemonize}}
-vacuum = true
-master = true
-max-requests = 1000
-chmod-socket = 666
-venv = {{venv}}
-plugin = python3
+processname = {{app.name}}
+chdir = {{app.www_path}}
+module = {{app.module}}
+venv = {{app.venv_path}}
+socket = 0.0.0.0:{{app.port}}
+daemonize = {{app.www_path}}/log.log
+processes = {{app.processes|default:'1'}}
+threads = {{app.threads|default:'2'}}
+vacuum = {% if app.vacuum %}true{% else %}false{% endif %}
+master = {% if app.master %}true{% else %}false{% endif %}
+max-requests = {{app.max_requests|default:'1000'}}
+chmod-socket = {{app.chmod_socket|default:'666'}}
+plugin = {{app.plugin|default:'python3'}}
