--- a/templates/templates/nginx_config.conf
+++ b/templates/templates/nginx_config.conf
@@ -2,13 +2,13 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name {{server_name}};
-    root {{root}};
+    server_name {{domain.name}};
+    root {{domain.www_path}};
 
     location / {
-        {% if is_python_app and port %}
+        {% if domain.domain_app and domain.domain_app.is_active %}
         include uwsgi_params;
-        uwsgi_pass 0.0.0.0:{{port}};
+        uwsgi_pass 0.0.0.0:{{domain.domain_app.port}};
         {% endif %}
         index index.html;
         try_files $uri $uri/ =404;
