--- a/templates/templates/uwsgi_config.ini
+++ b/templates/templates/uwsgi_config.ini
@@ -12,3 +12,4 @@ master = {% if app.master %}true{% else %}false{% endif %}
 max-requests = {{app.max_requests|default:'1000'}}
 chmod-socket = {{app.chmod_socket|default:'666'}}
 plugin = {{app.plugin|default:'python3'}}
+disable = {% if not app.is_active %}true{% else %}false{% endif %}
