--- a/templates/templates/uwsgi_service.ini
+++ b/templates/templates/uwsgi_service.ini
@@ -4,6 +4,7 @@ After=syslog.target
 
 [Service]
 ExecStart=/usr/bin/uwsgi --emperor /etc/uwsgi/apps-enabled
+ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 KillSignal=SIGQUIT
 Type=notify
