--- a/templates/templates/nginx_config.conf
+++ b/templates/templates/nginx_config.conf
@@ -1,6 +1,15 @@
 server {
+    {% if domain.active_certificate %}
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    ssl_certificate {{domain.active_certificate.certificate_path}};
+    ssl_certificate_key {{domain.active_certificate.private_key_path}};
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
+    {% else %}
     listen 80;
     listen [::]:80;
+    {% endif %}
 
     server_name {{domain.name}};
     root {{domain.www_path}};
@@ -29,3 +38,12 @@ server {
         return 404;
     }
 }
+
+{% if domain.active_certificate %}
+server {
+    listen 80;
+    listen [::]:80;
+    server_name {{domain.name}};
+    return 301 https://$host$request_uri;
+}
+{% endif %}
