Decoupled domain & apps architecture Domain & apps separation – Independent execution Standalone domain with independent app control Revamped architecture: domain runs independently Modular domain & app management

--- a/templates/templates/nginx_config.conf
+++ b/templates/templates/nginx_config.conf
@@ -1,5 +1,5 @@
 server {
-    {% if domain.active_certificate %}
+    {% if domain.pk and  domain.active_certificate %}
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     ssl_certificate {{domain.active_certificate.certificate_path}};
@@ -15,7 +15,7 @@ server {
     root {{domain.www_path}};
 
     location / {
-        {% if domain.domain_app and domain.domain_app.is_active %}
+        {% if domain.pk and  domain.domain_app and domain.domain_app.is_active %}
         include uwsgi_params;
         uwsgi_pass 0.0.0.0:{{domain.domain_app.port}};
         {% endif %}
@@ -39,7 +39,7 @@ server {
     }
 }
 
-{% if domain.active_certificate %}
+{% if domain.pk and  domain.active_certificate %}
 server {
     listen 80;
     listen [::]:80;
