Improving the efficiency of dealing with applications Improving the efficiency of the relationship between the domain and the application

--- a/templates/templates/nginx_config.conf
+++ b/templates/templates/nginx_config.conf
@@ -12,7 +12,11 @@ server {
     {% endif %}
 
     server_name {{domain.name}};
-    root {{domain.www_path}};
+    {% if domain.pk and  domain.domain_app and domain.domain_app.is_active %}
+    root {{domain.domain_app.full_www_path}};
+    {% else %}
+    root {{domain.full_www_path}};
+    {% endif %}
 
     location / {
         {% if domain.pk and  domain.domain_app and domain.domain_app.is_active %}
