--- a/templates/templates/uwsgi_config.ini
+++ b/templates/templates/uwsgi_config.ini
@@ -1,10 +1,10 @@
 [uwsgi]
 processname = {{app.name}}
-chdir = {{app.www_path}}
+chdir = {{app.full_www_path}}
 module = {{app.module}}
 venv = {{app.venv_path}}
 socket = 0.0.0.0:{{app.port}}
-daemonize = {{app.www_path}}/log.log
+daemonize = {{app.full_www_path}}/log.log
 processes = {{app.processes|default:'1'}}
 threads = {{app.threads|default:'2'}}
 vacuum = {% if app.vacuum %}true{% else %}false{% endif %}
@@ -12,4 +12,4 @@ master = {% if app.master %}true{% else %}false{% endif %}
 max-requests = {{app.max_requests|default:'1000'}}
 chmod-socket = {{app.chmod_socket|default:'666'}}
 plugin = {{app.plugin|default:'python3'}}
-disable = {% if not app.is_active %}true{% else %}false{% endif %}
+touch-reload = {{app.full_www_path}}/reload.trigger
