Improve Apps And domains Forms and Controls

--- a/templates/templates/nginx_config.conf
+++ b/templates/templates/nginx_config.conf
@@ -1,27 +1,30 @@
 server {
-    {% if domain.pk and  domain.active_certificate %}
+    {% if domain.pk and domain.active_certificate %}
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    ssl_certificate {{domain.active_certificate.certificate_path}};
-    ssl_certificate_key {{domain.active_certificate.private_key_path}};
+
+    ssl_certificate {{ domain.active_certificate.certificate_path }};
+    ssl_certificate_key {{ domain.active_certificate.private_key_path }};
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;
     {% else %}
     listen 80;
     listen [::]:80;
     {% endif %}
 
-    server_name {{domain.name}};
-    {% if domain.pk and  domain.domain_app and domain.domain_app.is_active %}
-    root {{domain.domain_app.full_www_path}};
+    server_name {{ domain.name }};
+
+    root {% if domain.pk and domain.domain_app and domain.domain_app.is_active %}
+        {{ domain.domain_app.full_www_path }};
     {% else %}
-    root {{domain.full_www_path}};
+        {{ domain.full_www_path }};
     {% endif %}
 
     location / {
-        {% if domain.pk and  domain.domain_app and domain.domain_app.is_active %}
+        {% if domain.pk and domain.domain_app and domain.domain_app.is_active %}
         include uwsgi_params;
-        uwsgi_pass 0.0.0.0:{{domain.domain_app.port}};
+        uwsgi_pass 0.0.0.0:{{ domain.domain_app.port }};
         {% endif %}
         index index.html;
         try_files $uri $uri/ =404;
@@ -29,12 +32,17 @@ server {
 
     error_page 404 /404.html;
 
-    location ~* \.(jpg|jpeg|gif|css|png|js|ico|html|svg|webp|woff|woff2|ttf|eot|mp4|webm|ogg|mp3|txt|xml|json)$ {
+    location ~* \.(jpg|jpeg|gif|png|svg|webp|ico|woff|woff2|ttf|eot|mp4|webm|ogg|mp3|txt|xml|json)$ {
         access_log off;
-        expires max;
+        expires 6M;
     }
 
-    location ~ /\.(ht|git|svn|db|bak|env) {
+    location ~* \.(css|js)$ {
+        access_log off;
+        expires 1M;
+    }
+
+    location ~ /\.(?!well-known).* {
         deny all;
     }
 
@@ -43,11 +51,11 @@ server {
     }
 }
 
-{% if domain.pk and  domain.active_certificate %}
+{% if domain.pk and domain.force_https %}
 server {
     listen 80;
     listen [::]:80;
-    server_name {{domain.name}};
+    server_name {{ domain.name }};
     return 301 https://$host$request_uri;
 }
 {% endif %}
